1)Transfered from sqlite to binary file. 2)Started loading hashes into memory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(unofficial-sqlite3 CONFIG REQUIRED)
 add_library(core
     core/hash.cpp
     core/scan.cpp
+    core/load.cpp
 )
 
 # Link OpenSSL and SQLite to core
