--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++ make libssl-dev
+      run: sudo apt-get update && sudo apt-get install -y cmake g++ make libssl-dev libcli11-dev
 
     - name: Create build directory
       run: mkdir -p build
