removed recursive scanning for now it scans only single file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Add vcpkg packages
 find_package(OpenSSL REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
-
 # Core library
 add_library(core
     core/hash.cpp
     core/scan.cpp
     core/load.cpp
+    core/quarantine.cpp
 )
 
 # Link OpenSSL and SQLite to core
