--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,20 +8,24 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++ make libssl-dev libcli11-dev
+    - name: Install dependencies (CLI11 via vcpkg)
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git
+        .\vcpkg\bootstrap-vcpkg.bat
+        .\vcpkg\vcpkg install cli11
+      shell: cmd
 
     - name: Create build directory
-      run: mkdir -p build
+      run: mkdir build
 
     - name: Run CMake
-      run: cmake -S . -B build
+      run: cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake
 
     - name: Build
-      run: cmake --build build
+      run: cmake --build build --config Release
