--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,18 +14,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install dependencies (CLI11 via vcpkg)
+    - name: Set up vcpkg
+      shell: cmd
       run: |
         git clone https://github.com/microsoft/vcpkg.git
         .\vcpkg\bootstrap-vcpkg.bat
-        .\vcpkg\vcpkg install cli11
-      shell: cmd
 
-    - name: Create build directory
-      run: mkdir build
-
-    - name: Run CMake
-      run: cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake
+    - name: Configure with CMake (manifest mode)
+      run: >
+        cmake -S . -B build
+        -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake"
+        -DVCPKG_MANIFEST_MODE=ON
+      shell: pwsh
 
     - name: Build
-      run: cmake --build build --config Release
+      run: cmake --build build --config Debug
