Realtime scanning (not yet fully developed). Just backing up the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,9 @@ project(masha)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add vcpkg packages
 find_package(OpenSSL REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
-# Core library
+
 add_library(core
     core/hash.cpp
     core/scan.cpp
@@ -16,13 +15,21 @@ add_library(core
     core/encrypt.cpp
 )
 
-# Link OpenSSL and SQLite to core
 target_link_libraries(core PRIVATE OpenSSL::SSL OpenSSL::Crypto Crypt32)
 
-# CLI executable
 add_executable(cli
     cli/main.cpp
 )
 
-# Link core + CLI11 to executable
 target_link_libraries(cli PRIVATE core CLI11::CLI11)
+
+add_executable(service
+    service/service.cpp  # Your service source file(s)
+    service/usn.cpp
+    service/log.cpp
+)
+
+target_link_libraries(service PRIVATE core ws2_32 advapi32 Crypt32)
+
+# Remove WIN32_EXECUTABLE to avoid WinMain unresolved error
+# If you want to keep it, your code must define WinMain entry point
