Implemented yara engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(OpenSSL REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
-
+find_package(unofficial-libyara CONFIG REQUIRED)
 add_library(core
     core/hash.cpp
     core/scan.cpp
     core/load.cpp
     core/quarantine.cpp
     core/encrypt.cpp
+    core/yara.cpp
 )
 
-target_link_libraries(core PRIVATE OpenSSL::SSL OpenSSL::Crypto Crypt32)
-
+target_link_libraries(core PRIVATE OpenSSL::SSL OpenSSL::Crypto Crypt32 unofficial::libyara::libyara)
 add_executable(cli
     cli/main.cpp
 )
