Added return type bool into core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(OpenSSL REQUIRED)
 find_package(CLI11 CONFIG REQUIRED)
 find_package(unofficial-libyara CONFIG REQUIRED)
+
+# === Core static library ===
 add_library(core
     core/hash.cpp
     core/scan.cpp
@@ -16,20 +18,23 @@ add_library(core
     core/yara.cpp
 )
 
-target_link_libraries(core PRIVATE OpenSSL::SSL OpenSSL::Crypto Crypt32 unofficial::libyara::libyara)
+target_link_libraries(core
+    PRIVATE
+    OpenSSL::SSL
+    OpenSSL::Crypto
+    Crypt32
+    unofficial::libyara::libyara
+)
+
+# === CLI executable ===
 add_executable(cli
     cli/main.cpp
 )
 
-target_link_libraries(cli PRIVATE core CLI11::CLI11)
-
-add_executable(service
-    service/service.cpp  # Your service source file(s)
-    service/usn.cpp
-    service/log.cpp
+target_link_libraries(cli
+    PRIVATE
+    core
+    CLI11::CLI11
 )
 
-target_link_libraries(service PRIVATE core ws2_32 advapi32 Crypt32)
 
-# Remove WIN32_EXECUTABLE to avoid WinMain unresolved error
-# If you want to keep it, your code must define WinMain entry point
